[package]
name = "excfinder"
version = "0.0.1"
authors = ["Petr Novotnik <pnovotnik@googlemail.com>"]
description = "A fast log file filter to list exception stacktraces"
license = "MIT"
keywords = ["text"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[dependencies]
regex = "*"
getopts = "*"

[dependencies.lines]
git = "https://github.com/xitep/lines-rs.git"
branch = "rustc-nightly"
