[package]
name = "excfinder"
version = "0.0.1"
authors = ["Petr Novotnik <pnovotnik@googlemail.com>"]
description = "A fast log file filter for exception stacktraces"
license = "MIT"
keywords = ["text"]
repository = "https://github.com/xitep/excfinder.git"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[dependencies]
regex = "*"
getopts = "*"
lines = "*"
